k8s/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atonixcorp
spec:
  tls:
    - hosts:
        - app.atonixcorp.com
      secretName: atonixcorp-production-tls
  rules:
    - host: app.atonixcorp.com
